--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
   <div id="buttons-container"></div>
   <div id="completion-message">Поздравляем! Вы прошли музыкальное лото! 🎉</div>
 
-  <div id="modal" class="modal">
-    <div class="modal-content">
-      <div id="modal-loader" class="loader" style="display:none;">Загрузка...</div>
-      <img id="modal-image" src="" alt="Изображение" style="display:none;">
-      <button class="stop-btn" style="display:none;">СТОП</button>
-    </div>
+ <div id="modal" class="modal">
+  <div class="modal-content">
+    <div id="modal-loader" class="loader" style="display:none;">Загрузка...</div>
+    <div id="modal-track-number" class="track-number" style="display:none;"></div>
+    <img id="modal-image" src="" alt="Изображение" style="display:none;">
+    <button class="stop-btn" style="display:none;">СТОП</button>
   </div>
+</div>
 
   <script src="scripts/app.js"></script>
 </body>
